# athdns

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  example.conf
cmake/: CodeCoverage.cmake  CompilerOptionCheck.cmake  ConfigCheck.cmake  FindJemalloc.cmake  FindLibuv.cmake  FindMbedTLS.cmake  FindNgHttp2.cmake  Fmt.cmake  Glog.cmake  Gtest.cmake  Spdlog.cmake  ThirdParty.cmake
dns/: dns.cpp
include/: athdns.h  config.h.in  config_file.h  dns.h  dnsserver.h  doh.h  format.h  hash.h  logging.h  objects.h  record.h  remote.h  server.h  single_link.h  utils.h
scripts/: build.bash  build.sh  upload.bash  upload.sh
server/: config.cpp  config_file.l  config_file.y  hash.cpp  logging.cpp  main.cpp  record.cpp  server.cpp  utils.cpp
src/: config.cpp  dns.cpp  doh.cpp  hash.cpp  logging.cpp  main.cpp  objects.cpp  record.cpp  remote.cpp  server.cpp  ssl.cpp  utils.cpp  uvcb.cpp
src/parser/: config_file.l  config_file.y
src/test/: CMakeLists.txt  dns_record.cpp  dns_record_test.cpp  dns_test.cpp  hash_test.cpp  server_test.cpp  test.conf  test.h  test_dns.cpp  test_utils.cpp  tests.cpp  utils.cpp  utils_test.cpp
tests/: CMakeLists.txt  hash_test.cpp  main.cpp  test.cpp  test.h  test_dns.cpp  utils.cpp
